# GeniusReads

./: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: .taurignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.sqlx/: query-007fe24f8ba4ca4abe0ac6dda522a30b0c1faab61c7afba074be0dd779642bcc.json  query-100e7cbbdb95550c69deb8c988c20c21f14b5e7761d6445906b41bf0afc8a7d5.json  query-13798b6646cff65c1a2aaea0e09b5cdbddb331e5d9a0fc2af645394ac18cd10b.json  query-199b1e0575f0a55253ef78f2549d615e55ab199ecc7153183b9f4d303bb16cc7.json  query-1cfaf12270b9c6d376ff643cebfd43304b3c15254bae1769e02ca4925e9c8021.json  query-28726d9743d7a87bad4eb804f7402716a45230d9811210f64b521057a50ba8ea.json  query-30b2931c9576da6cf5a2cfb6c125f11648401317bc9b6b15592e38f804a1841f.json  query-33158d5cddb25de01aadc283f8b70d4980fdb99e7e18eb70fea4e24eb3650822.json  query-3b0e0b75661e43e705346e1c202d93328c615c5f2717b4fc20b80501997b800b.json  query-4b6eb2c454ce9e4250badb84095f1045c316b1f5f4ca16b09076fae068b58252.json  query-4def2279a923af0d2710957540b63003b45cadba5c74ff62d34112e7cbbeb06a.json  query-6632ce6495235c17cd7e6aad707239f015e6886d6608dc5eeb4ab118bc54773d.json  query-7a1b572974be9a448adf4911a988ea703e5e52fce5c02e8e7c229c8b151dadd5.json  query-7d2cf99e467860ea78ffb4e189e09cf7df008b54f226157046378ff257d32dfb.json  query-7fd0d6fb79ccc0fc76a67690b39977a6c6588cc16e3271c322afa6453bee7cc0.json  query-9a89940d3d235a979168b2a3e555ebcd1024695fcea27f4deca0af314f5d5318.json  query-9bfa40280ebc36239419ddde4ad1722bb92ca4249ac044f1a3bf6149e194f858.json  query-9c19f6bc2e2787a3d22eb4c5d1e322e478b1a3e0ca8574f56a6a7437d6db107b.json  (+27 more)
src-tauri/python/: requirements.txt  (+4 more)
(+95 files in other folders)
